--- a/css/styles.css
+++ b/css/styles.css
@@ -3,22 +3,43 @@
 body {
 	font-family: Arial, Helvetica, sans-serif;
 	font-size: 16px;
-	color: #FFF;
+	color: grey;
+	padding:0px;
+	margin:0px;
+	outline: 0;
+}
+#page{
+	width:1000px;
+	margin:auto;
+}
+#entete{
+	width:1000px;;
+	margin:auto;
+	
 }
 table td tr{
 	margin:auto;
-	padding:0;
+	padding:0px;
+	border-spacing: 0;
+	
 }
 svg{
 	display:block;
+	padding:0px;
+	margin:0px;
+}
+text{
+	text-anchor:middle;	
 }
 .header{
-	width: 100%;
 	margin: auto;
+}
+#centre{
+	width:675px;
+	height:675px;
 }
 #logo
 {
-	width:50%;
 	height:10%;
 	margin:auto;
 	padding-left:190px;
@@ -26,21 +47,34 @@ svg{
 	padding-top:30px;
 }
 .Jeu{
-	width:900px;
+	text-align:center;
+	width:1000px;
 	margin:auto;
+	padding:0px;
+	margin:0px;
+}
+#plateau{
+	background-color:RGB(203,233,225);
+	cellspacing:0px;
+	border:0px;
+	
 }
 .titreP{
 	width:70px;
 	height:70px;
-	font-size:8px;
+	font-size:10px;
 }
 .montant{
 	width:50px;
 	height:50px;
-	font-size:8px;
+	font-size:12px;
 }
-.CaisseChance{
-
+.CaseAction{
+	border-style:solid;
+	border-width:2px;
+	border-color:black;
+	padding:0px;
+	margin:0px;
 }
 .caseH{
 	width:75px;
@@ -48,6 +82,8 @@ svg{
 	border-style:solid;
 	border-width:2px;
 	border-color:black;
+	padding:0px;
+	margin:0px;
 }
 .caseCote{
 	width:100px;
@@ -55,6 +91,8 @@ svg{
 	border-style:solid;
 	border-width:2px;
 	border-color:black;
+	padding:0px;
+	margin:0px;
 }
 .caseCoin{
 	width:100px;
@@ -62,4 +100,6 @@ svg{
 	border-style:solid;
 	border-width:2px;
 	border-color:black;
+	padding:0px;
+	margin:0px;
 }
